--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express": "^4.9.4",
     "fs-extra": "^0.12.0",
     "node-dir": "^0.1.6",
-    "q": "^1.0.1",
-    "socket.io": "^1.1.0"
+    "promise": "^6.0.0",
+    "socket.io": "^1.1.0",
+    "socket.io-client": "^1.1.0"
   }
 }
