--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/divshot/wdws"
   },
   "keywords": [
+    "wdws",
     "files",
     "server",
     "bower",
-    "git"
+    "git",
+    "web"
   ],
   "author": "Michael Bleigh",
   "license": "MIT",
