--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.4.2",
     "express": "^4.9.4",
     "fs-extra": "^0.12.0",
+    "glob": "^4.0.6",
     "node-dir": "^0.1.6",
     "promise": "^6.0.0",
     "socket.io": "^1.1.0",
